# my_rag_project

./: .cleanup_backup_marker.txt  .env.example  .gitignore  CLAUDE.md  CLAUDE.md.backup  EXECUTION_SUMMARY.md  FINAL_CHECKLIST.md  GIT_COMMIT_GUIDE.md  PHASE6_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  REFACTORING_STATUS.md  docker-compose.yml  pyproject.toml  test_hierarchical_vectorization.py
configs/: ablation_grid.yaml  best_retrieval.yaml  default.yaml  exp_semantic.yaml  exp_sentence.yaml  hierarchical_markdown.yaml
data/parsed_nodes/: exp_497d0d8821b9.json  test_sentence_policy.json
docs/: multimodal-architecture-implementation.md  multimodal-changes-verification-checklist-part2.md  multimodal-changes-verification-checklist.md  phase2_phase3_verification_report.md  phase3_verification_plan.md  refactoring-plan.md
docs/agent-learning/: README.md
docs/agent-learning/cases/: 2026-02-24_document-cleaning-policy.md  2026-02-24_document-cleaning-sentence-chunking.md  TEMPLATE.md
scripts/: diagnose_env.py  evaluate_retrieval.py  init_mysql.sql  migrate_multimodal_schema.sql  probe_qdrant.py  verify_infrastructure.sh  verify_refactoring.sh
services/agent/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  VERIFICATION.md  pyproject.toml  test_service.sh
services/agent/app/: config.py  main.py  schemas.py
services/agent/app/agent/: nodes.py  state.py  tools.py  workflow.py
services/agent/app/api/: routes.py
services/agent/app/components/providers/: dashscope_llm.py
services/agent/app/services/: vlm.py
services/agent/app/utils/: logger.py
services/indexing/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  pyproject.toml
services/indexing/app/: __init__.py  config.py  main.py
services/indexing/app/api/: __init__.py  routes.py
services/indexing/app/components/: __init__.py
services/indexing/app/components/chunkers/: fixed.py  multimodal.py  recursive.py  semantic.py  sentence.py
services/indexing/app/components/processors/: __init__.py  image.py
services/indexing/app/components/providers/: __init__.py  bgem3.py  dashscope.py  vlm.py
services/indexing/app/config/: __init__.py  experiment.py  settings.py
services/indexing/app/core/: __init__.py  registry.py  types.py
services/indexing/app/parsing/: __init__.py  markdown_cleaner.py  multimodal_parser.py  parser.py
services/indexing/app/services/: __init__.py  ingestion.py  multimodal_retrieval.py  pdf_to_markdown.py  retrieval.py
services/indexing/app/storage/: __init__.py  minio_client.py  mysql_client.py  vectordb.py
services/indexing/app/utils/: __init__.py  logger.py  role_mapper.py
services/inference/: Dockerfile  pyproject.toml
services/inference/app/: __init__.py  config.py  main.py
services/inference/app/agent/: nodes.py  tools.py  workflow.py
services/inference/app/api/: routes.py
services/inference/app/components/providers/: __init__.py  dashscope.py  qwen_vl_llm.py  vlm.py
services/inference/app/services/: multimodal_retrieval.py  retrieval.py
services/inference/app/storage/: mysql_client.py  vectordb.py
services/ingestion/: .gitignore  Dockerfile  pyproject.toml
services/ingestion/app/: __init__.py  config.py  main.py
services/ingestion/app/api/: routes.py
services/ingestion/app/components/: __init__.py
services/ingestion/app/components/chunkers/: __init__.py  fixed.py  recursive.py  semantic.py  sentence.py
services/ingestion/app/components/providers/: __init__.py  dashscope.py
services/ingestion/app/parsing/: cleaner.py  parser.py
services/ingestion/app/services/: ingestion.py
services/ingestion/app/storage/: metadata.py  vectordb.py
services/ingestion/tests/datas/cleaner_test_results/policy/: 0 关于做好2026届本科生毕业论文设计工作的通知教务部_cleaned.md  0-3 计算机类毕业设计基础要求_cleaned.md  1-1 计算机与人工智能学院软件学院2026届本科毕业设计论文指导手册_cleaned.md  1-2 本科毕业设计论文选题指导意见_计算机与人工智能学院试行_cleaned.md  1-3 新工科背景下计算机类毕业设计选题基本导向_cleaned.md  1-5 本科生优秀毕业设计论文推荐条件_cleaned.md  4-5 论文复制比格式AIGC检测规则_cleaned.md
services/ingestion/tests/datas/sentence_chunker_test_results/policy/: 0 关于做好2026届本科生毕业论文设计工作的通知教务部_cleaned_children.json  0 关于做好2026届本科生毕业论文设计工作的通知教务部_cleaned_parents.json  0-3 计算机类毕业设计基础要求_cleaned_children.json  0-3 计算机类毕业设计基础要求_cleaned_parents.json  1-1 计算机与人工智能学院软件学院2026届本科毕业设计论文指导手册_cleaned_children.json  1-1 计算机与人工智能学院软件学院2026届本科毕业设计论文指导手册_cleaned_parents.json  1-2 本科毕业设计论文选题指导意见_计算机与人工智能学院试行_cleaned_children.json  1-2 本科毕业设计论文选题指导意见_计算机与人工智能学院试行_cleaned_parents.json  1-3 新工科背景下计算机类毕业设计选题基本导向_cleaned_children.json  1-3 新工科背景下计算机类毕业设计选题基本导向_cleaned_parents.json  1-5 本科生优秀毕业设计论文推荐条件_cleaned_children.json  1-5 本科生优秀毕业设计论文推荐条件_cleaned_parents.json  4-5 论文复制比格式AIGC检测规则_cleaned_children.json  4-5 论文复制比格式AIGC检测规则_cleaned_parents.json
services/ingestion/tests/scripts/: test_cleaner.py  test_sentence_chunker.py  test_vectorization.py
services/orchestrator/: .env.example  CHECKLIST.md  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  SUMMARY.txt  pyproject.toml  test_structure.py
services/orchestrator/app/: __init__.py  config.py  main.py  schemas.py
services/orchestrator/app/api/: routes.py
services/orchestrator/app/services/: agent_client.py  indexing_client.py  minio_client.py
services/orchestrator/app/utils/: logger.py
services/testing/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  pyproject.toml
services/testing/app/: __init__.py  config.py  main.py  schemas.py
services/testing/app/api/: __init__.py  routes.py
services/testing/app/data/: test_queries.json
services/testing/app/services/: __init__.py  result_storage.py  test_runner.py
services/testing/app/tests/: test_agent.py  test_e2e.py  test_indexing.py  test_orchestrator.py
services/testing/app/utils/: logger.py
src/app/: main.py  settings.py
src/app/api/: server.py
src/rag/: main.py
src/rag/agent/: nodes.py  prompts.py  state.py  tools.py  workflow.py
tests/data/: test_dataset.csv
tests/integration/: test_dashscope_api.py
(+43 files in other folders)
