[tool.poetry]
name = "my-rag-project"
version = "0.1.0"
description = "Enterprise RAG with LlamaIndex and LangGraph"
authors = ["Your Name <your@email.com>"]
packages = [{include = "rag", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# --- LlamaIndex æ ¸å¿ƒ ---
# å¿…é¡»ä½¿ç”¨ 0.13.0+ ä»¥é€‚é…æœ€æ–°çš„ Qdrant æ’ä»¶åŠŸèƒ½
llama-index-core = "^0.13.0"

# --- é˜¿é‡Œäº‘ DashScope ç»„ä»¶ ---
llama-index-llms-dashscope = ">=0.2.0"
llama-index-embeddings-dashscope = ">=0.2.0"
llama-index-postprocessor-dashscope-rerank = ">=0.2.0"

# --- OpenAI å…¼å®¹å±‚ ---
llama-index-embeddings-openai = ">=0.2.0"

# --- å‘é‡æ•°æ®åº“ ---
# å…³é”®ï¼šä¿®å¤ QdrantClient è°ƒç”¨é—®é¢˜çš„ç‰ˆæœ¬
llama-index-vector-stores-qdrant = "^0.9.1"
qdrant-client = "^1.16.2"

# --- æ–‡ä»¶è¯»å– ---
llama-index-readers-file = ">=0.2.0"
pypdf = "^6.0.0"
# ðŸ‘‡ [æ–°å¢ž] è§£æž .docx æ–‡ä»¶çš„è½»é‡çº§åº“ï¼Œé˜²æ­¢åŠ è½½å™¨åˆå§‹åŒ–å¡é¡¿
docx2txt = "^0.8"

# --- ç¨€ç–å‘é‡ç”Ÿæˆ (jieba ä¸­æ–‡åˆ†è¯ + å“ˆå¸Œç¨€ç–å‘é‡) ---
jieba = "^0.42.0"

# --- æ ¸å¿ƒæ¡†æž¶ ---
langgraph = "^0.2.0"
pydantic-settings = "^2.0.0"

# --- LangChain å…¨å®¶æ¡¶ (ç”¨äºŽ Tool å°è£…) ---
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-core = "^0.2.0"
langchain-openai = "^0.1.0"

# --- åŸºç¡€è®¾æ–½ä¸Ž UI ---
gradio = "^5.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
transformers = ">=4.40.0"
typer = "^0.21.1"
fastapi = "^0.128.6"
uvicorn = "^0.40.0"
httpx = "^0.28.1"
pyyaml = "^6.0.3"
pandas = "^2.0.0"
numpy = "^1.24.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"