[tool.poetry]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent Service — Pure LLM/VLM capabilities with LangGraph workflow"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# numpy: agent 环境需要 <2.0 (langchain 兼容)
numpy = "<2.0"

# Web framework
fastapi = "^0.115"
uvicorn = "^0.34"
sse-starlette = "^2.0"
httpx = "^0.27"

# LangGraph + LangChain (Agent workflow)
langgraph = ">=0.2"
langchain = ">=0.2"
langchain-core = ">=0.2"
langchain-community = ">=0.2"

# DashScope (LLM + VLM)
dashscope = "^1.25"

# Env
python-dotenv = "^1.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Logging
loguru = "^0.7"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
