[tool.poetry]
name = "testing"
version = "0.1.0"
description = "Testing Service - Centralized test management"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-json-report = "^1.5.0"
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
